infrastructure/configs/the-intersect/grafana/lgtm-distributed/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: grafana
spec:
  parentRefs:
    - name: external-gateway-https
      namespace: cilium-ingress
  hostnames: ["${SUB_SENIOR_ABLE}.${DOMAIN_CORONET_SUMMIT}"]
  rules:
    - backendRefs:
        - name: lgtm-distributed-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mimir-httproute
  namespace: grafana
spec:
  parentRefs:
    - name: internal-gateway-http
      namespace: cilium-ingress
  hostnames: ["${SUB_PRAIRIE_BEACON}.${DOMAIN_COBRA_LANTERN}"]
  rules:
    - backendRefs:
        - name: lgtm-distributed-mimir-nginx
          port: 80
